Fix mobile issue on /our-blog/ where image becomes too small and squished. Make image & content take 100% width and remove floats and paddings

--- a/themes/torontoOnline/style.css
+++ b/themes/torontoOnline/style.css
@@ -313,26 +313,23 @@ ul.blog-visit li .post-information div.date {
     border-bottom: 1px solid #ebebeb;
 }
 
-.blog article img,
-.category article img {
-    float: left;
-    width: 40%
-}
-
 .blog article img {
     margin-top: 12px;
 }
 
+.blog article img,
+.category article img {
+    float: left;
+    width: 100%
+}
+
 .blog article .content-post,
 .category article .content-post {
-    float: left;
-    width: 60%;
-    padding-left: 20px;
+    width: 100%;
 }
 
 .blog article .content-post a.read-more,
 .category article .content-post a.read-more {
-    float: right;
     margin-top: -31px;
 }
 
@@ -359,12 +356,25 @@ ul.blog-visit li .post-information div.date {
 }
 
 
-
 @media only screen and (min-width : 480px) {
     ul.blog-visit li {
         float: left;
         width: calc(50% - 15px);
     }
+
+    .blog article img,
+    .category article img {
+        float: left;
+        width: 40%
+}
+
+    .blog article .content-post,
+    .category article .content-post {
+        float: left;
+        width: 60%;
+        padding-left: 20px;
+}
+
 }
 
 @media only screen and (min-width : 768px) {
